
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int getpid () ;
 int memset (char*,int ,int) ;
 int sprintf (char*,char*,int,int,int) ;

void setfilename(char *s,int len)
{
    int a;

    memset(s,0,len);
    a=getpid();
    sprintf(s,"%d%d%d.txt",a,a,a);
}
